--- a/src/Home/less/contact0.less
+++ b/src/Home/less/contact0.less
@@ -1,7 +1,7 @@
 @content10: content10;
 .@{content10}-wrapper {
   height: 480px;
-  background: url(https://gw.alipayobjects.com/os/s/prod/seeconf/c66ebea962cdf544926ca5a472dea5ea.jpg) no-repeat 50%;
+  background: url(https://yyq-1252854133.cos.ap-beijing.myqcloud.com/jiaju/mapbg.png) no-repeat 50%;
   background-size: cover;
   position: relative;
   display: flex;
